--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 			<div id="myDinner-bar" class="col-xs-3">
 				<h4 id="dinnerBar-title">My Dinner</h4>
 				<div id="numberOfGuests-panel">
-					<p>Number of guests: <span id="numberOfGuests">0</span></p>
+					<p>Number of guests: <span id="numberOfGuests"></span></p>
 					<div id="numberOfGuests-function">
-						<button id="minusGuest" class="btn"><span class="glyphicon glyphicon-minus"></span></button>
-						<button id="plusGuest" class="btn"><span class="glyphicon glyphicon-plus"></span></button>
+						<button id="minusGuest" class="btn" onclick="decreaseGuest()";><span class="glyphicon glyphicon-minus"></span></button>
+						<button id="plusGuest" class="btn" onclick="increaseGuest()";><span class="glyphicon glyphicon-plus"></span></button>
 					</div>
 				</div>
 
@@ -67,7 +67,7 @@
 			</div>
 
 			<div id="selectDish-panel" class="col-xs-9">
-				<div id="selectDish-filter"></div>
+				<div id="selectDish-filter">
 					<h4>SELECT DISH</h4>
 					<div id="filter-bar">
 						<form class="form-inline">
@@ -81,6 +81,7 @@
 							</select>
 						</form>
 					</div>
+				</div>
 				<div id="dishesList" class="marketing">
 					<div id="dish-example" class="col-xs-4" style="margin-top: 20px; text-align: center">
 						<img src="images/bakedbrie.jpg" class="img-circle" alt="Dish-example, bakedbrie" width="100" height="100">
@@ -230,7 +231,7 @@
 						</div>
 						<div id="printoutDish-description" class="col-xs-5">
 							<h4>LASAGNE</h4>
-							<p class="bg-info">Lorem ipsum dolor sit amet</p>
+							<p class="bg-info">Lorem ipsum dolor sit amet</p	>
 						</div>
 						<div id="printoutDish-preparation" class="col-xs-5">
 							<h4>PREPARATION</h4>
@@ -273,10 +274,34 @@
 	<script src="js/model/dinnerModel.js"></script>
 	<script src="js/view/navigationBar.js"></script>
 	<script src="js/view/startWizard.js"></script>
+	<script src="js/view/myDinnerBar.js"></script>
 	<script src="js/view/detailedDish.js"></script>
 	<script src="js/view/confirmDinner.js"></script>
 	<script src="js/view/printRecipe.js"></script>
+	<!--
 	<script src="js/view/exampleView.js"></script>
 	<script src="js/view/exampleViewController.js"></script>
+	-->
+
+	<!-- The application event functions -->
+	<script type="text/javascript">
+		function decreaseGuest() {
+			model.setNumberOfGuests(model.getNumberOfGuests()-1);
+			// model.numberOfGuests = 5;
+			// model.numberOfGuests -= 1;
+			myDinnerBar = new MyDinnerBar($("#displayField"));
+		}
+
+		function increaseGuest() {
+			model.setNumberOfGuests(model.getNumberOfGuests()+1);
+			// model.numberOfGuests = 5;
+			// model.numberOfGuests -= 1;
+			myDinnerBar = new MyDinnerBar($("#displayField"));
+		}
+
+	</script>
+
+
+
   </body>
 </html>
