--- a/index.html
+++ b/index.html
@@ -160,46 +160,19 @@
 			</div>
 
 			<div id="confirmDinner-page">
-				<div class="col-xs-12">
+				<div class="col-xs-12" style="padding:40px">
 					<h4 class="col-xs-10">My Dinner:</h4>
 					<button class="btn btn-primary">Go back and edit dinner</button>
 				</div>
 
-				<div id="myMenu-detail" class="col-xs-12">
-					<div id="myMenu-display" class="col-xs-9">
-						<div id="dishInMenu-example" class="col-xs-3">
-							<img src="images/bakedbrie.jpg" class="img-thumbnail">
-							<h5>Bakedbrie</h5>
-							<p>77.20 SEK</p>
-						</div>
-						<div id="dishInMenu-example" class="col-xs-3">
-							<img src="images/bakedbrie.jpg" class="img-thumbnail">
-							<h5>Bakedbrie</h5>
-							<p>77.20 SEK</p>
-						</div>
-						<div id="dishInMenu-example" class="col-xs-3">
-							<img src="images/bakedbrie.jpg" class="img-thumbnail">
-							<h5>Bakedbrie</h5>
-							<p>77.20 SEK</p>
-						</div>
-						<div id="dishInMenu-example" class="col-xs-3">
-							<img src="images/bakedbrie.jpg" class="img-thumbnail">
-							<h5>Bakedbrie</h5>
-							<p>77.20 SEK</p>
-						</div>
-						<div id="dishInMenu-example" class="col-xs-3">
-							<img src="images/bakedbrie.jpg" class="img-thumbnail">
-							<h5>Bakedbrie</h5>
-							<p>77.20 SEK</p>
-						</div>
-					</div>
+				<div id="myMenu-detail" class="col-xs-9">
 
-					<div id="myMenu-totalCost" class="col-xs-3">
-						<p class="bg-info">Total:</p>
-						<p id="myMenu-total-cost">341.20 SEK</p>
-					</div>
+
 				</div>
-
+        <div id="myMenu-totalCost" class="col-xs-3">
+          <p class="bg-info">Total:</p>
+          <p id="myMenu-total-cost">341.20 SEK</p>
+        </div>
 				<div id="printMenu-button">
 					<div class="col-xs-5"></div>
 					<button class="btn btn-primary col-xs-2">Print Full Recipe</button>
