--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</div>
 	-->
 	<div id="navigationBar" class="container">
-		<h1 id="main-header"></h1>
+		<h1 id="main-header" onclick="backto_home()"></h1>
 		<h4 id="sub-header"></h4>
 	</div>
 
@@ -95,16 +95,18 @@
 
 			<div id="dishInfo-panel" class="col-xs-9">
 				<div id="dish-description" class="col-xs-5">
+				<!--
 					<h3>LASAGNE</h3>
 					<img src="images/bakedbrie.jpg" alt="Dish-example, bakedbrie">
 					<p id="dish-introduction">lorem ipsum...</p>
 					<div id="back-to-selectDishes">
 						<button class="btn btn-primary">back to Select Dish</button>
 					</div>
+				-->
 				</div>
 
 				<div id="dish-ingredient" class="col-xs-7">
-					<table class="table table-hover table-striped">
+					<table id="dish-ingredient-table" class="table table-hover table-striped">
 						<caption>INGREDIENTS FOR 4 PEOPLE</caption>
 						<thead>
 							<tr>
@@ -114,21 +116,21 @@
 								<th>Cost</th>
 							</tr>
 						</thead>
-						<tbody>
+						<tbody id="dish-ingredient-tbody">
+						<!--
 							<tr>
 								<td>2tbsp</td>
 								<td>olive oil</td>
 								<td>SEK</td>
 								<td>0.20</td>
 							</tr>
-						</tbody>
-						<tbody>
 							<tr>
 								<td>750g</td>
 								<td>lean beef mince</td>
 								<td>SEK</td>
 								<td>10.00</td>
 							</tr>
+						-->
 						</tbody>
 						<tfoot>
 							<tr>
@@ -151,7 +153,7 @@
 					<h3>PREPARATION</h3>
 					<div id="preparation-list">
 						<ol class="list-group">
-							<li class="list-group-item" style="display: list-item">Open the refrigerator</li>
+							<li class="list-group-item">Open the refrigerator</li>
 							<li class="list-group-item">Put the elephant into the fridge</li>
 							<li class="list-group-item">Close the door of the refridgerator</li>
 						</ol>
@@ -301,6 +303,14 @@
 			myDinnerBar = new MyDinnerBar($("#displayField"));
 		}
 
+	</script>
+
+	<!-- The function for navigation bar in the top -->
+	<script type="text/javascript">
+		function backto_home() {
+			navigationBar = new NavigationBar($("#navigationBar"));
+			startWizard = new StartWizard($("#displayField"));
+		}
 	</script>
 
 
