--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</div>
 	-->
 
-	<div style="background-color: #FFF; height: 100%; opacity: 0.85;">
+	<div style="background-color: rgba(255 ,255 , 255, 0.7); padding-bottom: 25px">
 
 		<div id="navigationBar" class="container">
 			<h1 id="main-header" onclick="back_to_home()">HOMELETTE</h1>
