--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 
 					</tbody>
 					<tbody id="menu-pending">
-						<tr id="default-menu-row">
+						<tr id="pending-menu-row">
 							<td>Pending</td>
-							<td>0.00</td>
+							<td id="pending-menu-price">0.00</td>
 							<td></td>
 						</tr>
 						<tr id="myMenu-display"></tr>
@@ -154,14 +154,14 @@
 							</tr>
 						-->
 					</tbody>
-					<tfoot>
-						<tr>
+					<tfoot id="dish-ingredient-tfoot">
+						<!-- <tr>
 							<td><b>Total</b></td>
 							<td></td>
 							<td>SEK</td>
 							<td>10.00</td>
 						</tr>
-						<tr>
+ -->						<tr>
 							<td colspan="2"></td>
 							<td colspan="2">
 								<button id="confirm-dish" class="btn btn-primary">Confirm Dish</button>
