--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 			<div id="dish-ingredient" class="col-xs-7">
 				<table id="dish-ingredient-table" class="table table-hover table-striped">
-					<caption>INGREDIENTS FOR 4 PEOPLE</caption>
+					<caption>INGREDIENTS FOR <span id="people-num"></span> PEOPLE</caption>
 					<thead>
 						<tr>
 							<th>Amount</th>
@@ -316,7 +316,11 @@
 
 		showDetail = function(){
 			var id = $(this).attr("key");
-			var detailedDish = new DetailedDish($("#displayField"), id);
+      if(detailedDish){
+        detailedDish.update = function(){};
+      }
+
+			detailedDish = new DetailedDish($("#displayField"), id);
 			var detailedDishController = new DetailedDishController(detailedDish, model);
 		}
 
