--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
 
 						<select id="dish-type" class="form-control">
 							<option value="all">All</option>
-							<option value="starter">Starter</option>
-							<option value="main dish">Main Dish</option>
-							<option value="dessert">Dessert</option>
+							<option value="Appetizers">Appetizers</option>
+							<option value="Main Dish">Main Dish</option>
+							<option value="Desserts">Dessert</option>
 						</select>
 					</form>
 					<div class="col-xs-7">
@@ -321,6 +321,7 @@
 		      }
 
 			detailedDish = new DetailedDish($("#displayField"), id);
+      //alert(detailedDish)
 			var detailedDishController = new DetailedDishController(detailedDish, model);
 		}
 
