loading indication added.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,10 @@
 					</div>
 				</div>
 			</div>
-			<div id="dishesList" class="marketing">
+			<!-- <div id="notice-info" class="alert alert-info">Loading</div> -->
+			<div>
+			<div id="notice-info" class="alert alert-info" style="margin-top: 50px">Loading data.</div>
+				<div id="dishesList" class="marketing">
 				<!--
 					<div id="dish-example" class="col-xs-4" style="margin-top: 20px; text-align: center">
 						<img src="images/bakedbrie.jpg" class="img-circle" alt="Dish-example, bakedbrie" width="100" height="100">
@@ -112,7 +115,9 @@
 						<p>Brief description about the example dish.</p>
 					</div>
 				-->
+				</div>
 			</div>
+			
 		</div>
 
 		<div id="dishInfo-panel" class="col-xs-9">
